--- a/package.json
+++ b/package.json
@@ -23,37 +23,29 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "dotenv": "^6.1.0",
     "enzyme-adapter-react-16": "^1.0.4",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "4.2.0",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
-    "moment": "^2.19.3",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
     "raf": "^3.4.0",
+    "randomcolor": "^0.5.3",
     "react": "16.1.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.3.0",
     "react-dom": "16.1.0",
     "react-fontawesome": "^1.6.1",
-    "react-modal": "2.2.2",
-    "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
-    "redux": "3.7.2",
-    "redux-mock-store": "1.2.3",
-    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
     "enzyme": "3.1.1",
     "enzyme-to-json": "3.2.2",
     "jest": "20.0.4",
